--- a/Задание#1/Текст задания #1.md
+++ b/Задание#1/Текст задания #1.md
@@ -1,63 +1,69 @@
-﻿Postman.
-HW_1
+# ﻿Postman. HW_1
 
-Создать запросы в Postman.
-
-Protocol: http
-IP: 162.55.220.72
-Port: 5005
-
+>Создать запросы в Postman.
+>Protocol: http
+>IP: 162.55.220.72
+>Port: 5005
+___
 EP_1
+```
 Method: GET
 EndPoint: /get_method
 request url params: 
  name: str
  age: int
-
+```
 response: 
+```
 [
     “Str”,
     “Str”
 ]
-
+```
 EP_2
+```
 Method: POST
 EndPoint: /user_info_3
 request form data: 
  name: str
  age: int
  salary: int
-
+```
 response: 
+```
 {'name': name,
           'age': age,
           'salary': salary,
           'family': {'children': [['Alex', 24], ['Kate', 12]],
                      'u_salary_1_5_year': salary * 4}}
-
+```
 EP_3
+```
 Method: GET
 EndPoint: /object_info_1
 request url params: 
  name: str
  age: int
  weight: int
-
-response: 
+```
+response:
+```
 {'name': name,
           'age': age,
           'daily_food': weight * 0.012,
           'daily_sleep': weight * 2.5}
-
+```
 EP_4
+```
 Method: GET
 EndPoint: /object_info_2
 request url params: 
  name: str
  age: int
  salary: int
-
+```
 response: 
+```
 {'start_qa_salary': salary,
           'qa_salary_after_6_months': salary * 2,
           'qa_salary_after_12_months': salary * 2.7,
@@ -67,16 +73,18 @@ response:
                      'u_age': age,
                      'u_salary_5_years': salary * 4.2}
           }
-
+```
 EP_5
+```
 Method: GET
 EndPoint: /object_info_3
 request url params: 
  name: str
  age: int
  salary: int
-
+```
 response: 
+```
 {'name': name,
           'age': age,
           'salary': salary,
@@ -87,29 +95,34 @@ response:
                                      'age': 4}},
                      'u_salary_1_5_year': salary * 4}
           }
-
+```
 EP_6
+```
 Method: GET
 EndPoint: /object_info_4
 request url params: 
  name: str
  age: int
  salary: int
-
+```
 response: 
+```
 {'name': name,
           'age': int(age),
           'salary': [salary, str(salary * 2), str(salary * 3)]}
+```
 ____
 EP_7
+```
 Method: POST
 EndPoint: /user_info_2
 request form data: 
  name: str
  age: int
  salary: int
-
+```
 response: 
+```
 {'start_qa_salary': salary,
           'qa_salary_after_6_months': salary * 2,
           'qa_salary_after_12_months': salary * 2.7,
@@ -119,3 +132,4 @@ response:
                      'u_age': age,
                      'u_salary_5_years': salary * 4.2}
           }
+```
