--- a/Задание#1/Текст задания #1.md
+++ b/Задание#1/Текст задания #1.md
@@ -23,6 +23,7 @@ response:
     “Str”
 ]
 ```
+___
 EP_2
 ```
 Method: POST
@@ -39,10 +40,15 @@ response:
     'age': age,
     'salary': salary,
     'family': {
-        'children': [['Alex', 24], ['Kate', 12]],
-        'u_salary_1_5_year': salary * 4}
+        'children': [
+            ['Alex', 24],
+            ['Kate', 12]
+                    ],
+        'u_salary_1_5_year': salary * 4
+        }
 }
 ```
+___
 EP_3
 ```
 Method: GET
@@ -61,6 +67,7 @@ response:
     'daily_sleep': weight * 2.5
 }
 ```
+___
 EP_4
 ```
 Method: GET
@@ -85,6 +92,7 @@ response:
         }
 }
 ```
+___
 EP_5
 ```
 Method: GET
@@ -104,10 +112,13 @@ response:
         'children': [['Alex', 24], ['Kate', 12]],
         'pets': {
             'cat':{'name':'Sunny','age': 3},
-            'dog':{'name':'Luky','age': 4}},
-            'u_salary_1_5_year': salary * 4}
+            'dog':{'name':'Luky','age': 4}
+            },
+        'u_salary_1_5_year': salary * 4
+    }
 }
 ```
+___
 EP_6
 ```
 Method: GET
